[gd_scene load_steps=6 format=3 uid="uid://lw51kxfh533k"]

[ext_resource type="Script" uid="uid://b1g5p7k6jtxf1" path="res://src/UI/CharacterSelectMenu.gd" id="1_1g0rx"]
[ext_resource type="Texture2D" uid="uid://dvkrii4j30bhu" path="res://assets/textures_character/character-r.png" id="1_jhi54"]
[ext_resource type="Texture2D" uid="uid://b0rkygomwvlk0" path="res://assets/textures_character/character-k.png" id="2_iki4e"]
[ext_resource type="Texture2D" uid="uid://btyk1lgg01yct" path="res://assets/textures_character/character-o.png" id="3_1g0rx"]
[ext_resource type="Texture2D" uid="uid://ca8deyhr27urw" path="res://assets/textures_character/character-p.png" id="4_46evt"]

[node name="CharacterSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1g0rx")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49600002
anchor_top = 0.74700004
anchor_right = 0.565
anchor_bottom = 0.93100005
offset_left = -10.392029
offset_top = 27.94397
offset_right = 34.119995
offset_bottom = -19.288025
text = "play"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.09
anchor_right = 0.5
anchor_bottom = 0.125
offset_left = -117.0
offset_top = -0.3200035
offset_right = 102.0
grow_horizontal = 2
text = "SELECCT YOUR RECOLECTOR"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 27.0
offset_right = 172.0
offset_bottom = 92.0
text = "SAVE AND
BACK"

[node name="SelectCharacterK" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.294
anchor_top = 0.441
anchor_right = 0.365
anchor_bottom = 0.583
offset_left = 0.31201172
offset_top = 0.23199463
offset_right = -0.480011
offset_bottom = 0.21600342
icon = ExtResource("2_iki4e")

[node name="SelectCharacterO" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.41400003
anchor_right = 0.22000001
anchor_bottom = 0.55600005
offset_left = 3.199997
offset_top = 3.7279663
offset_right = 3.5599823
offset_bottom = 3.711975
icon = ExtResource("3_1g0rx")

[node name="SelectCharacterR" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.66800004
anchor_top = 0.43100002
anchor_right = 0.74500006
anchor_bottom = 0.57100004
offset_left = 4.463928
offset_top = -0.2880249
offset_right = -0.24005127
offset_bottom = -0.008026123
grow_horizontal = 0
grow_vertical = 2
icon = ExtResource("1_jhi54")

[node name="SelectCharacterP" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.46600002
anchor_top = 0.43500003
anchor_right = 0.536
anchor_bottom = 0.577
offset_left = 0.16796875
offset_top = 0.1199646
offset_right = 0.5279541
offset_bottom = 0.10397339
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("4_46evt")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SelectCharacterK" to="." method="_on_select_character_k_pressed"]
[connection signal="pressed" from="SelectCharacterO" to="." method="_on_select_character_o_pressed"]
[connection signal="pressed" from="SelectCharacterR" to="." method="_on_select_character_r_pressed"]
[connection signal="pressed" from="SelectCharacterP" to="." method="_on_select_character_p_pressed"]
